rake brush spacing wrong since revision 076616898b #53593

Closed
opened 2017-12-19 22:21:58 +01:00 by Vilem Duha · 8 comments
Member

this commit:
Fix #53577: Rake sculpt/paint wrong on first step
name

introduced a new bug:
spacing of the brush changes radically when scaling the brush, doesn't anymore work when the brush is scaled down beyond some ratio...it grows like it would be absolute distances or something, I don't see this quite clearly. The brush should behave consistently when scaled up/down...

In the uploaded file below, please test the 'seam' brush. the file itself should show the issue quite clearly, also attaching 2 screenshots.
seambug.blend

this bug:
image.png
VS old bug(first step wrong):
image.png

as a little side - note, I don't know why blender's rake option doesn't have an 'roll' option that would enable applying various alphas in much better way. see it here:
https://pixologic.com/zclassroom/lesson/alpha-roll
blender's rake actually always applies the center of the image. Roll means that the seamless alpha (should be seamless for this) is offset each brush step, and thus the brush-center of the image is taken from a different y-coordinate of the image. Probably also some image deform could be applied, but definitely just taking a different center/offseting each step would be a big + by now.

this commit: Fix #53577: Rake sculpt/paint wrong on first step [name ](https://developer.blender.org/rB076616898bff0acfc2336351ee975bd0fef944b2) introduced a new bug: spacing of the brush changes radically when scaling the brush, doesn't anymore work when the brush is scaled down beyond some ratio...it grows like it would be absolute distances or something, I don't see this quite clearly. The brush should behave consistently when scaled up/down... In the uploaded file below, please test the 'seam' brush. the file itself should show the issue quite clearly, also attaching 2 screenshots. [seambug.blend](https://archive.blender.org/developer/F1458813/seambug.blend) this bug: ![image.png](https://archive.blender.org/developer/F1458820/image.png) VS old bug(first step wrong): ![image.png](https://archive.blender.org/developer/F1458822/image.png) as a little side - note, I don't know why blender's rake option doesn't have an 'roll' option that would enable applying various alphas in much better way. see it here: https://pixologic.com/zclassroom/lesson/alpha-roll blender's rake actually always applies the center of the image. Roll means that the seamless alpha (should be seamless for this) is offset each brush step, and thus the brush-center of the image is taken from a different y-coordinate of the image. Probably also some image deform could be applied, but definitely just taking a different center/offseting each step would be a big + by now.
Author
Member

Added subscriber: @VilemDuha

Added subscriber: @VilemDuha
Author
Member

I forgot to pack the brush alpha into the example file, here is the file also with the brush:
seambug.blend

I forgot to pack the brush alpha into the example file, here is the file also with the brush: [seambug.blend](https://archive.blender.org/developer/F1459040/seambug.blend)

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey
Campbell Barton was assigned by Sergey Sharybin 2017-12-20 10:14:35 +01:00

@ideasman42, mind having a look? Thanks! :)

@ideasman42, mind having a look? Thanks! :)
Author
Member

Peeked in the code and it's quite clear what happens.
the check if there's enough distance for estimating rake brush orientation is resetting, so small steps aren't possible.
The check should happen only on the beginning of the stroke, now it happens after every brush application...
Is that clear?

Peeked in the code and it's quite clear what happens. the check if there's enough distance for estimating rake brush orientation is resetting, so small steps aren't possible. The check should happen only on the beginning of the stroke, now it happens after every brush application... Is that clear?
Author
Member

There should be a bugfix release soon and this bug literally brakes sculpting.

There should be a bugfix release soon and this bug literally brakes sculpting.

This issue was referenced by bbc562fc69

This issue was referenced by bbc562fc69e1cb01d68877f002bb976881c08d3f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53593
No description provided.