Fix T53593: sculpt brush rake spacing bug after recent bugfix.